--- a/meta.yaml
+++ b/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: pinocchio
-  version: 2.9.9
+  version: 2.99.0
 
 source:
   git_url: https://github.com/stack-of-tasks/pinocchio.git
@@ -13,22 +13,28 @@ requirements:
     - {{ compiler('cxx') }}
     - git
     - python=3.9
-    - eigenpy=2.7.10
+    - eigenpy=2.8.0
     - boost-cpp
   host:
     - python=3.9
-    - eigenpy=2.7.10
-    - casadi
-    - urdfdom
+    - eigenpy=2.8.0
+    - casadi=3.6.3
+    - urdfdom=3.1.1
+    - hpp-fcl
     - boost-cpp
     - eigen
+    - tinyxml=2.6.2
+    - tinyxml2=9.0.0
   run:
     - python=3.9
-    - eigenpy=2.7.10
-    - casadi
-    - urdfdom
+    - eigenpy=2.8.0
+    - casadi=3.6.3
+    - urdfdom=3.1.1
+    - hpp-fcl
     - boost-cpp
     - eigen
+    - tinyxml=2.6.2
+    - tinyxml2=9.0.0
 
 about:
   home: https://github.com/stack-of-tasks/pinocchio
